--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: npm ci
 
       - name: Build with Next.js
-        run: npm next build
+        run: npx --no-install next build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
